# agent-massif

./: .gitignore  README.md
aml-analyser/: .env.example  README.md  pyproject.toml
aml-analyser/resources/: README.md
aml-analyser/resources/prompts/cdd_crp_analyser/: system.yaml  system_v1.yaml  system_v2.yaml  system_v3.yaml  user.yaml  user_test.txt
aml-analyser/src/agents/cdd_crp_analyser/: agent.py  user_message_builder.py
aml-analyser/src/schemas/: cdd_crp_analyser_output.py  transactions_history_analyser_output.py
aml-analyser/src/tools/websearch/: google_search.py
aml-analyser/src/utils/: prompt_loader.py
