[project]
name = "aml-analyser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-search-results>=2.4.2",
    "jinja2>=3.1.6",
    "langchain>=1.2.7",
    "langchain-google-vertexai>=3.2.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
]
